--- a/broker/build.gradle
+++ b/broker/build.gradle
@@ -34,7 +34,8 @@ openApiGenerate {
             library : "spring-boot",
             dateLibrary : "java8",
             interfaceOnly : "false",
-            useJakartaEe : "true"
+            useJakartaEe : "true",
+            delegatePattern : "true"
     ]
 }
 
