feat: Adding a demo-app as a POC for interaction between consumer/producer and the broker. Fixed issue where BufferUnderflowException happenned because index was written at the same position as the log

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,4 +11,4 @@ plugins {
 }
 
 rootProject.name = 'distributed-messaging'
-include('broker', 'log-storage-engine', 'message', 'consumer', 'producer')
+include('broker', 'log-storage-engine', 'message', 'consumer', 'producer', 'demo-app')
