feat: writing tcp-client, tcp-server and integrating it to the broker alongside the REST API

--- a/broker/src/main/resources/application.yml
+++ b/broker/src/main/resources/application.yml
@@ -2,3 +2,7 @@ broker:
   log-directory: ./tmp/broker/logs
   max-segment-size: 1000000
   flush-interval: 50000
+
+binary:
+  server:
+    port: 9180
