--- a/broker/build.gradle
+++ b/broker/build.gradle
@@ -13,11 +13,14 @@ dependencies {
     implementation 'org.apache.commons:commons-text'
     implementation project(':message')
     implementation project(':log-storage-engine')
+    implementation project(':tcp-server')
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.spockframework:spock-core:2.4-groovy-5.0'
     testImplementation 'org.spockframework:spock-spring:2.4-groovy-5.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+    testImplementation project(':producer')
+    testImplementation project(':consumer')
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
