--- a/log-storage-engine/build.gradle
+++ b/log-storage-engine/build.gradle
@@ -7,6 +7,8 @@ plugins {
 dependencies {
     implementation project(':message')
 
+    testImplementation 'com.google.guava:guava:33.4.0-jre'
+
     testImplementation 'org.spockframework:spock-core:2.4-groovy-5.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
