feat: Implementing partitioning using least-used partition

--- a/broker/src/test/resources/application-test.yml
+++ b/broker/src/test/resources/application-test.yml
@@ -2,6 +2,7 @@ broker:
   log-directory: ./tmp/broker/logs
   max-segment-size: 20
   flush-interval: 1
+  partition-number: 3
 
 binary:
   server:
