--- a/broker/src/main/resources/application.yml
+++ b/broker/src/main/resources/application.yml
@@ -2,6 +2,7 @@ broker:
   log-directory: ./tmp/broker/logs
   max-segment-size: 1000000
   flush-interval: 50000
+  partition-number: 3
 
 binary:
   server:
